tests/fails/failtrunc.t
require("fail")

terra foo() : {}
	return (foo()),4
end
foo()
